<resources>
    <string name="app_name">Paramail</string>
    <string name="account_setup_fragment_label">Новый аккаунт</string>
    <string name="action_settings">Settings</string>
    <string name="account_name">Название аккаунта</string>
    <string name="select_account_type">Выберите тип аккаунта</string>
    <string name="other_mail">Другая почта</string>
    <string name="smtp_step_header">Исходящая почта (SMTP)</string>
    <string name="server">Сервер</string>
    <string name="port">Порт</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="done">Готово</string>
    <string name="auth">Авторизация</string>
    <string name="email_login">Логин (Email)</string>
    <string name="password">Пароль</string>
    <string name="use_ssl">Использовать SSL</string>
    <string name="default_smtp_port">465</string>
    <string name="imap_step_header">Входящая почта (IMAP)</string>
    <string name="default_imap_port">993</string>
    <string name="connection_error">Ошибка подключения</string>
    <string name="auth_error">Ошибка аутентификации</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="no_accounts">У вас пока нет аккаунтов</string>
    <string name="add_account">Добавить аккаунт</string>
    <string name="getting_started">Начало работы</string>
    <string name="loading_messages">Загрузка писем…</string>
    <string name="forward">Переслать</string>
    <string name="reply">Ответить</string>
    <string name="loading">Загрузка…</string>
    <string name="reply_all">Ответить всем</string>
    <string name="failed_to_show_message">Письмо имеет неподдерживаемый формат</string>
    <string name="search_messages">Поиск по письмам</string>
    <string name="sort">Сортировать</string>
    <string-array name="size_units">
        <item>Б</item>
        <item>КиБ</item>
        <item>МиБ</item>
        <item>ГиБ</item>
    </string-array>
    <string name="open">Открыть</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="downloading">Загрузка %1$s</string>
    <string name="downloaded">%1$s загружен</string>
    <string name="cannot_download">Не удалось загрузить %1$s</string>
    <string name="error_loading_message_list">Ошибка загрузки списка писем</string>
    <string name="error_loading_message">Ошибка загрузки письма</string>
    <string name="try_again">Повторить</string>
    <string name="settings">Настройки</string>
    <string name="inbox">Входящие</string>
    <string name="search_is_not_supported">Сервер не поддерживает поиск</string>
    <string name="subject">Тема:</string>
    <string name="composer_to">Кому:</string>
    <string name="composer_cc">Копия:</string>
    <string name="composer_subject">Тема:</string>
    <string name="composer_attachments">Вложения:</string>
    <string name="add">Добавить</string>
    <string name="send">Отправить</string>
    <string name="message_will_be_sent">Письмо будет отправлено через %1$d сек.</string>
    <string name="message_sent">Письмо отправлено</string>
    <string name="message_send_error">Ошибка отправки письма</string>
    <string name="reply_block_header">%1$s от %2$s:\n\n</string>
    <string name="non_plain_text_content">Содержимое не является текстом</string>
    <string name="forward_block_header">------ Пересылаемое сообщение ------\nОт кого: %1$s\nКому: %2$s\nДата: %3$s\nТема: %4$s\n\n</string>
    <string name="message_check_interval">Интервал проверки новых сообщений, мин</string>
    <string name="account_management">Управление аккаунтами</string>
    <string name="message_channel_name">Входящие письма</string>
    <string name="new_message">Новое письмо</string>
    <string name="open_saved_message_dialog">У вас есть неотправленное письмо.\nПродолжить редактирование?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="invalid_email">Неверный формат адреса</string>
    <string name="empty_field">Поле не может быть пустым</string>
</resources>