<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountsetup.AccountSetupWizardFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout="@layout/fragment_account_setup_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?borderlessButtonStyle"
        android:text="@string/back" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?borderlessButtonStyle"
        android:text="@string/next" />

    <ProgressBar
        android:id="@+id/check_progress"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toStartOf="@id/next_btn"
        app:layout_constraintTop_toTopOf="@id/next_btn"
        app:layout_constraintBottom_toBottomOf="@id/next_btn"/>

    <TextView
        android:id="@+id/connection_error"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/next_btn"
        app:layout_constraintTop_toTopOf="@id/next_btn"
        app:layout_constraintEnd_toStartOf="@id/next_btn"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:text="@string/connection_error"
        android:gravity="center_vertical"
        android:textColor="?colorError" />

</androidx.constraintlayout.widget.ConstraintLayout>