<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MessageComposerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/composer_to"
            android:layout_gravity="center_vertical|end"
            android:textColor="?colorOnBackground"
            android:textSize="16sp"
            android:padding="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="50">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/to_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/composer_cc"
            android:layout_gravity="center_vertical|end"
            android:textSize="16sp"
            android:textColor="?colorOnBackground"
            android:padding="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="50">

            <MultiAutoCompleteTextView
                android:id="@+id/cc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical|end"
            android:text="@string/composer_subject"
            android:textSize="16sp"
            android:textColor="?colorOnBackground"
            android:padding="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/composer_attachments"
            android:layout_gravity="center_vertical|end"
            android:textSize="16sp"
            android:textColor="?colorOnBackground"
            android:padding="5dp" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="50">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/attachment_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <!--            <com.google.android.material.chip.Chip-->
                <!--                style="@style/Widget.MaterialComponents.Chip.Entry"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                app:chipIcon="@drawable/ic_attachment"-->
                <!--                android:text="zalupa.png"-->
                <!--                app:closeIconVisible="true" />-->

                <com.google.android.material.chip.Chip
                    android:id="@+id/add_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_plus"
                    android:text="@string/add" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

    </GridLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_height="2dp"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="?colorOnBackground"
        android:padding="5dp"
        android:textSize="16sp"
        android:gravity="start"
        tools:text="Текст письма"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/send"
        android:layout_gravity="end" />

</LinearLayout>