<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.messageview.MessageViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/date"
            tools:text="Отправитель"
            android:textSize="16sp"
            android:maxLines="1"
            android:textColor="?colorOnBackground" />

        <TextView
            android:id="@+id/recipients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/date"
            tools:text="Получатель1, Получатель2..."
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            tools:text="Дата и время" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/attachment_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacing="5dp"
        android:padding="5dp">

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/attachment_divider"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/body_load_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <ScrollView
            android:id="@+id/body_content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ScrollView>

    </FrameLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Paramail.Button.MessageAction"
            android:id="@+id/reply_all_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/reply_all"
            app:icon="@drawable/ic_reply_all" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Paramail.Button.MessageAction"
            android:id="@+id/reply_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/reply"
            app:icon="@drawable/ic_reply" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Paramail.Button.MessageAction"
            android:id="@+id/forward_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/forward"
            app:icon="@drawable/ic_forward" />

    </LinearLayout>

</LinearLayout>